feat(sendMail): add `addMetadata()` and `delay()` demo

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 # TEST_DATABASE_URL=file:./.redwood/test.db
 # PRISMA_HIDE_UPDATE_MESSAGE=true
 # LOG_LEVEL=trace
+RESEND_API_KEY=
+SEND_TO_EMAIL=charly@defer.run
+DEFER_TOKEN=
