vercel setup + new functions

--- a/redwood.toml
+++ b/redwood.toml
@@ -9,7 +9,7 @@
   bundler = "vite"
   title = "Defer and RedwoodJS Example App"
   port = 8910
-  apiUrl = "/.redwood/functions" # You can customize graphql and dbauth urls individually too: see https://redwoodjs.com/docs/app-configuration-redwood-toml#api-paths
+  apiUrl = "/api"
   includeEnvironmentVariables = []
 [api]
   port = 8911
