--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
       "web"
     ]
   },
+  "scripts": {
+    "postbuild": "node scripts/inspect.js"
+  },
   "devDependencies": {
     "@redwoodjs/core": "6.0.0-rc.617",
     "prettier-plugin-tailwindcss": "^0.4.0"
