--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "@redwoodjs/core": "6.0.0-rc.617",
-    "prettier-plugin-tailwindcss": "^0.4.0"
+    "prettier-plugin-tailwindcss": "^0.4.0",
+    "typescript": "^5.3.3"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
